{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 20,
  "lineage": "d03fc406-3d19-8ef9-b2a0-5fc5008275f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TF-EC2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f34c5ae932e6f0e4",
            "arn": "arn:aws:ec2:us-east-1:328063658474:instance/i-063734bd203531ded",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063734bd203531ded",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TF-Key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f31fe48e4433dc3",
            "private_dns": "ip-10-99-1-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.99.1.78",
            "public_dns": "ec2-34-228-215-74.compute-1.amazonaws.com",
            "public_ip": "34.228.215.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e9044aea9992d336",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010a9a420b4a6877b",
            "tags": {
              "Name": "TF-EC2-USE1a-1"
            },
            "tags_all": {
              "Name": "TF-EC2-USE1a-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f9af0d6fa895cf2"
            ]
          },
          "dependencies": [
            "aws_security_group.TF-SG-1",
            "aws_subnet.TF-Sub-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TF-IGW-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328063658474:internet-gateway/igw-082fe49c7a2af9782",
            "id": "igw-082fe49c7a2af9782",
            "owner_id": "328063658474",
            "tags": {
              "Name": "TF-IGW-1"
            },
            "tags_all": {
              "Name": "TF-IGW-1"
            },
            "vpc_id": "vpc-0e5e52eec638445f0"
          },
          "dependencies": [
            "aws_vpc.TF-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TF-rtb-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328063658474:route-table/rtb-082b0bbb0e28d69cf",
            "id": "rtb-082b0bbb0e28d69cf",
            "owner_id": "328063658474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082fe49c7a2af9782",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF-rtb-1"
            },
            "tags_all": {
              "Name": "TF-rtb-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5e52eec638445f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TF-IGW-1",
            "aws_vpc.TF-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TF-associate-sub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c664987843e6a584",
            "route_table_id": "rtb-082b0bbb0e28d69cf",
            "subnet_id": "subnet-010a9a420b4a6877b"
          },
          "dependencies": [
            "aws_internet_gateway.TF-IGW-1",
            "aws_route_table.TF-rtb-1",
            "aws_subnet.TF-Sub-1a",
            "aws_vpc.TF-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TF-SG-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328063658474:security-group/sg-07f9af0d6fa895cf2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f9af0d6fa895cf2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TF-SG-1",
            "name_prefix": "",
            "owner_id": "328063658474",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5e52eec638445f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TF-Sub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328063658474:subnet/subnet-010a9a420b4a6877b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.99.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010a9a420b4a6877b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328063658474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Sub-1a"
            },
            "tags_all": {
              "Name": "TF-Sub-1a"
            },
            "vpc_id": "vpc-0e5e52eec638445f0"
          },
          "dependencies": [
            "aws_vpc.TF-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TF-Sub-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328063658474:subnet/subnet-0df481e2e747b33eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.99.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df481e2e747b33eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328063658474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Sub-1b"
            },
            "tags_all": {
              "Name": "TF-Sub-1b"
            },
            "vpc_id": "vpc-0e5e52eec638445f0"
          },
          "dependencies": [
            "aws_vpc.TF-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TF-VPC-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328063658474:vpc/vpc-0e5e52eec638445f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/16",
            "default_network_acl_id": "acl-0aa1aa64336479c43",
            "default_route_table_id": "rtb-039df21dbb32df046",
            "default_security_group_id": "sg-0d1da52b2c68c6f90",
            "dhcp_options_id": "dopt-0410406e6b062b027",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5e52eec638445f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039df21dbb32df046",
            "owner_id": "328063658474",
            "tags": {
              "Name": "TF-VPC-1"
            },
            "tags_all": {
              "Name": "TF-VPC-1"
            }
          }
        }
      ]
    }
  ]
}